modified:   certs/templates/certs/index.html Asterix the Grade to discourage ppl grading sites willy nilly

--- a/django_certiffy_project/certs/templates/certs/detail.html
+++ b/django_certiffy_project/certs/templates/certs/detail.html
@@ -38,7 +38,7 @@
                 method="POST"
                 class="btn btn-warning mt-1"
                 formaction="{% url 'certs:grade' id %}"
-           >Grade External Facing Site ..</button>
+                ><sup>*</sup>Grade External Facing Site ..</button>
            <button  class="btn btn-warning mb-3"
                     type="submit"
                     method="POST"
