modified:   models.py 	modified:   templates/certs/index.html
Another default email in the Settings form, and the "*" to help remind
ppl not to use qualys on other people sites.
Also change the settings defaults as the DAYSTOGO at the end of the
subject line is often not visible and its a key piece of daily
information.

--- a/django_certiffy_project/certs/templates/certs/index.html
+++ b/django_certiffy_project/certs/templates/certs/index.html
@@ -56,7 +56,7 @@
                 <th>Hostname <font class="fw-lighter">(contacts)</font></th>
                 <th>Port&nbsp;</th>
                 <th>Expiry</th> 
-                <th>Grade</th> 
+                <th>&sup*Grade</th> 
             </tr>
         </thread>
         <tbody>
