modified:   certs/templates/certs/export.html 	modified:   certs/views.py 	modified:   users/templates/users/export.html rationalise naming of export files tidy of debugging lines

--- a/django_certiffy_project/certs/templates/certs/export.html
+++ b/django_certiffy_project/certs/templates/certs/export.html
@@ -9,7 +9,7 @@
                 xenctype="multipart/form-data">
             {% csrf_token %}
             <label name="file"> Filename to export to:
-            <input type="text" id="file" name="file" placeholder="exportcsv.csv">
+            <input type="text" id="file" name="file" value="certiffy-certs-export.csv" placeholder="certiffy-certs-export.csv">
             <button type="submit" class="btn btn-warning">Export</button>
         </form>
     </div>
