--- a/django_certiffy_project/users/templates/users/export.html
+++ b/django_certiffy_project/users/templates/users/export.html
@@ -8,7 +8,7 @@
                 method="post" 
                 enctype="multipart/form-data">
             <label name="file"> Filename to export to:</label>
-            <input type="text" id="file" name="file" value="certiffy-export-users.json" placeholder="certiffy-export-users.json">
+            <input type="text" id="file" name="file" value="certiffy-users-exports.json" placeholder="certiffy-users-export.json">
             <button type="submit" class="btn btn-warning">Export</button>
         </form>
     </div>
