The expiry date is in UTC format, but for humans, on the index page, have made it local timezone.
It was a bit striking on the graph that the day could go to the next day with the local timezone / UCT difference so I've played down that by removing the day.

The &sup didn't always work ont he main page so put in <sup>*</sup> but in fact I had missed out the copyright line it referred to.

--- a/django_certiffy_project/certs/templates/certs/index.html
+++ b/django_certiffy_project/certs/templates/certs/index.html
@@ -56,7 +56,7 @@
                 <th>Hostname <font class="fw-lighter">(contacts)</font></th>
                 <th>Port&nbsp;</th>
                 <th>Expiry</th> 
-                <th>&sup*Grade</th> 
+                <th><sup>*</sup>Grade</th> 
             </tr>
         </thread>
         <tbody>
@@ -82,7 +82,7 @@
                     )
             </td>
             <td> {{cert.port}} </td>
-            <td>{{ cert.expiry_date }}</td>
+            <td>{{ cert.expiry_date|date:"d-M-Y  H:i T"  }}</td>
             <td>{{ cert.grade}}</td>
         </tr>
         {% endfor %}
@@ -108,6 +108,7 @@
                 class="btn btn-warning me-2 ">Delete All</button>
          </form>
     </div>
+{% include 'copyright.html'%}
 </main>
 {% endblock %}
 
