The importing Users was looked at. The initial form wasn't a GET but a POST and gave a Invalid notice. There was a debug line which was pointless. I have commented out the user:importcsv  as we are pretty committed now to using json due to people using notes. There is still a problem with importing that pops up alot when testing. I will submit a bug issue to its recognised

--- a/django_certiffy_project/users/templates/users/index.html
+++ b/django_certiffy_project/users/templates/users/index.html
@@ -53,7 +53,7 @@
     </table>
     <div class="mb-2 mt-2" style="display: flex; flex-direction: row;">
         <form
-            action="{% url 'users:importjson' %}" method="post" />
+            action="{% url 'users:importjson' %}" method="get" />
             <button
                 type="submit"
                 {% if user.role == "ADMIN" and not user.is_superuser %} disabled {% endif %}
